R1.2.0          Jun-29-2020     Kukhee Kim
                - add epics variable to choose yaml style
                  var(Gen2UpConvYaml, 0)  --- Gen1 style
                  var(Gen2UpConvYaml, 1)  --- Gen2 style

R1.1.0          Jun-26-2020     Kukhee Kim
                - reducedown JESD 8 to 6

R1.0.0          Jan-29-2020     Kukhee Kim
                - build against cpsw/framework R4.4.1
                - build with buildroot-2019.08

commonATCA API layer: Nov. 11, 2019
                Initial import into GIT repo
                Merge crossbarControl API